Stronger wrapping method. Fixed immutable list returning